Configure CORS for Render frontend